--- a/package.json
+++ b/package.json
@@ -8,22 +8,31 @@
     "server": "nodemon server/index.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "install-all": "npm install && cd client && npm install"
+    "install-all": "npm install && cd client && npm install",
+    "test": "node scripts/runTests.js",
+    "test:performance": "node scripts/runTests.js --performance",
+    "test:rl": "node scripts/runTests.js --rl",
+    "test:system": "node scripts/testSystem.js"
   },
-  "keywords": ["ai", "chatbot", "receptionist", "path-finder"],
+  "keywords": [
+    "ai",
+    "chatbot",
+    "receptionist",
+    "path-finder"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.2.1",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "@google/generative-ai": "^0.2.1",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2",
+    "openai": "^4.104.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2"
   }
 }
-
