--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "axios": "^1.6.2",
-    "@react-google-maps/api": "^2.19.3"
+    "@react-google-maps/api": "^2.19.3",
+    "microsoft-cognitiveservices-speech-sdk": "^1.40.0"
   },
   "scripts": {
     "start": "react-scripts start",
