--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install",
+    "migrate:mongodb": "node scripts/migrateToMongoDB.js",
     "test": "node scripts/runTests.js",
     "test:performance": "node scripts/runTests.js --performance",
     "test:rl": "node scripts/runTests.js --rl",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^9.1.4",
     "openai": "^4.104.0"
   },
   "devDependencies": {
